adding my own stuffs

--- a/src/index-Henry-Laptop.html
+++ b/src/index-Henry-Laptop.html
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.jpg"
+                src="assets/profile.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -79,10 +79,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I'm specialize on Web Development, including technologies like HTML, CSS, Javascripts, and React
+                I'm specialize on Web Development, including technologies like HTML, CSS, Javascripts, React, 
               </p>
               <p class="about-wrapper__info-text">
-                I love studying in my free time. My goal is to one day become a Machine Learning Engineer. 
+                Extra Information about you! like hobbies and your goals.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -111,7 +111,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Gradient Generator</h3>
+                <h3 class="project-wrapper__text-title">Project Title 0</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -125,7 +125,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://kunehenry.github.io/color-generator/"
+                  href="#!"
                 >
                   See Live
                 </a>
@@ -133,7 +133,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://github.com/kunehenry/color-generator"
+                  href="#!"
                 >
                   Source Code
                 </a>
@@ -152,7 +152,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="./assets/project.png"
+                      src="assets/project.jpg"
                     />
                   </div>
                 </a>
@@ -206,7 +206,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.png"
+                      src="assets/project.jpg"
                     />
                   </div>
                 </a>
@@ -260,7 +260,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.png"
+                      src="assets/project.jpg"
                     />
                   </div>
                 </a>
