--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title> Dat Nguyen | Developer</title>
+    <title>[Your name here] | Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -46,13 +46,13 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Dat Nguyen</span>
+          Hi, my name is <span class="text-color-main">Your Name</span>
           <br />
-          I'm a Developer.
+          I'm the Unknown Developer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >About Me</a
+            >Know more</a
           >
         </p>
       </div>
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.jpg"
+                src="assets/profile.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -79,10 +79,11 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I'm specialize on Web Development, including technologies like HTML, CSS, Javascripts, and React
+                This is where you can describe about yourself. The more you
+                describe about yourself, the more chances you can!
               </p>
               <p class="about-wrapper__info-text">
-                I love studying in my free time. My goal is to one day become a Machine Learning Engineer. 
+                Extra Information about you! like hobbies and your goals.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -111,7 +112,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Gradient Generator</h3>
+                <h3 class="project-wrapper__text-title">Project Title 0</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -125,7 +126,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://kunehenry.github.io/color-generator/"
+                  href="#!"
                 >
                   See Live
                 </a>
@@ -133,7 +134,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://github.com/kunehenry/color-generator"
+                  href="#!"
                 >
                   Source Code
                 </a>
@@ -152,7 +153,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="./assets/project.png"
+                      src="assets/project.jpg"
                     />
                   </div>
                 </a>
@@ -206,7 +207,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.png"
+                      src="assets/project.jpg"
                     />
                   </div>
                 </a>
@@ -260,7 +261,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.png"
+                      src="assets/project.jpg"
                     />
                   </div>
                 </a>
